<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_login_1200">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            >
            <TextView
                android:text="@string/master_menu_product_name_title"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:textSize="19dp"
                android:hint="@string/btn_login"
                android:layout_gravity="left"
                android:layout_weight="1.00"
                android:layout_marginLeft="10dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:inputType="textPersonName"
                android:textSize="@dimen/text_size"
                android:id="@+id/txtProductName"
                android:hint="@string/master_menu_product_name_hint"
                android:textColor="#FFF"
                android:textColorHint="#dfdddd"
                android:layout_weight="1.00"
                android:background="@drawable/background_edittext"
                android:maxLength="100"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:paddingLeft="7dp"
                />

            <TextView
                android:text="@string/master_menu_product_name_jp_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:textSize="19dp"
                android:hint="@string/btn_login"
                android:layout_gravity="left"
                android:layout_weight="1.00"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:inputType="textPersonName"
                android:textSize="@dimen/text_size"
                android:id="@+id/txtProductNamJp"
                android:hint="@string/master_menu_product_name_jp_hint"
                android:textColor="#FFF"
                android:textColorHint="#dfdddd"
                android:layout_weight="1.00"
                android:background="@drawable/background_edittext"
                android:maxLength="100"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:paddingLeft="7dp" />

            <TextView
                android:text="@string/master_menu_product_type_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lblPassword"
                android:textColor="#FFF"
                android:textSize="19dp"
                android:hint="@string/btn_login"
                android:layout_gravity="left"
                android:layout_weight="1.00"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.00"
                android:id="@+id/productType"
                android:background="@drawable/background_edittext"
                >
            </Spinner>

            <TextView
                android:text="@string/master_menu_product_price_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:textSize="19dp"
                android:hint="@string/btn_login"
                android:layout_gravity="left"
                android:layout_weight="1.00"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/txtPrice"
                android:layout_weight="1.00"
                android:background="@drawable/background_edittext"
                android:textColor="@color/colorWhite"
                android:textAlignment="textEnd"
                />

            <Button
                android:text="@string/master_menu_product_btn_reg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:textSize="@dimen/text_size"
                android:id="@+id/btnRegOrUpdProduct"
                android:background="@drawable/background_button"
                android:layout_weight="1.00"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:onClick="regProduct"
                android:layout_marginTop="30dp"
                />

            <Button
                android:text="@string/master_menu_product_btn_del"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:textSize="@dimen/text_size"
                android:id="@+id/btnDelProduct"
                android:background="@drawable/background_button"
                android:layout_weight="1.00"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:onClick="delProduct"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorRed"
                />

        </LinearLayout>
    </FrameLayout>
</layout>