<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:background="@drawable/background_login_1200"
	>

    <TextView
    	android:id="@+id/tableTitle"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_gravity="center_horizontal"
    	android:text="Table"
    	android:textAppearance="?android:attr/textAppearanceLarge" android:textSize="24dp" android:textStyle="bold" android:textColor="#3b3"/>

    <TextView
    	android:id="@+id/tableCustomers"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_gravity="center"
    	android:text="Medium Text"
    	android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
    	android:id="@+id/linearLayout2"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
		android:layout_marginTop="10dp">

        <Button
        	android:id="@+id/orderAddButton"
        	android:layout_width="wrap_content"
        	android:layout_height="50dp"
			android:layout_gravity="top"
			android:textSize="12dp"
			android:text="@string/table_order_btn_add_order"/>

		<Button
			android:id="@+id/btnPayment"
			android:layout_width="wrap_content"
			android:layout_height="50dp"
			android:layout_gravity="top"
			android:textSize="12dp"
			android:text="@string/table_order_btn_payment"/>

        <Button
        	android:id="@+id/tableOrderFinalizaButton"
        	android:layout_width="wrap_content"
			android:layout_height="50dp"
			android:layout_gravity="top"
			android:textSize="12dp"
			android:text="@string/table_order_btn_cancel_all"/>

    </LinearLayout>

    <LinearLayout
    	android:id="@+id/linearLayout1"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
		android:background="@color/backgroundTblOrder"
		android:paddingTop="1dp"
		android:layout_marginTop="5dp">

        <ListView
        	android:id="@+id/tableListView"
        	android:layout_width="fill_parent"
        	android:layout_height="fill_parent"
        	android:background="@color/backgroundTblOrder"
        	android:dividerHeight="1dp"
			>

        </ListView>

    </LinearLayout>

</LinearLayout>