<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout
        android:id="@+id/activity_main_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="ctwhs.order.activity.MainMenuActivity"
        android:background="@drawable/background_login_1200">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:text="@string/main_menu_btn_history_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonFoods"
                    android:layout_weight="1"
                    android:onClick="onClickHistory"
                    />

                <Button
                    android:text="@string/main_menu_btn_table_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonTable"
                    android:layout_weight="1"
                    android:onClick="onClickTables"
                    />

                <Button
                    android:text="@string/master_menu_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonMasterMenu"
                    android:layout_weight="1"
                    android:onClick="onClickMasterMenu"
                    />
            </LinearLayout>

             <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                 android:layout_marginTop="10dp"
                android:id="@+id/resultAreas"
                 >
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</layout>