<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_login_1200"
        >

        <LinearLayout
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:inputType="textPersonName"
                android:textSize="@dimen/text_size"
                android:id="@+id/txtUserName"
                android:hint="@string/txt_user_name"
                android:textColor="#FFF"
                android:textColorHint="#dfdddd"
                android:layout_weight="1.00"
                android:drawableEnd="@drawable/username"
                android:background="@drawable/background_edittext"
                android:maxLength="15"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:paddingLeft="7dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:inputType="textPersonName"
                android:textSize="@dimen/text_size"
                android:id="@+id/txtPasswword"
                android:textColorHint="#dfdddd"
                android:hint="@string/txt_password"
                android:layout_weight="1.00"
                android:drawableEnd="@drawable/ic_person_black_24dp"
                android:textColor="#FFF"
                android:textCursorDrawable="@color/colorWhite"
                android:cursorVisible="true"
                android:background="@drawable/background_edittext"
                android:maxLength="15"
                android:password="true"
                android:layout_marginBottom="7dp"
                android:paddingLeft="7dp"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp" />

            <TextView
                android:text="@string/txt_view_recovery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lblPassword"
                android:textColor="#FFF"
                android:textSize="20dp"
                android:hint="@string/btn_login"
                android:layout_gravity="right"
                android:layout_weight="1.00"
                />

            <Button
                android:text="@string/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="@dimen/text_size"
                android:id="@+id/btnLogin"
                android:background="@drawable/background_button"
                android:drawableRight="@drawable/login"
                android:layout_weight="1.00"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:onClick="loginAction"
                />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                >
                <Button
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="20dp"
                    android:textSize="@dimen/text_size"
                    android:id="@+id/btnVn"
                    android:background="@drawable/ic_vietnam"
                    android:onClick="onClickVn"
                    />

                <Button
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:textSize="@dimen/text_size"
                    android:id="@+id/btnJp"
                    android:background="@drawable/ic_japan"
                    android:onClick="onClickJp"
                    />
            </LinearLayout>
        </LinearLayout>



        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center">

            <TextView
                android:text="@string/txt_view_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lblRegister"
                android:textSize="@dimen/text_size"
                android:textColor="#FFF"
                android:hint="Đăng ký tại đây"
                android:layout_weight="1.00"
                android:gravity="center"
                />
        </LinearLayout>

    </FrameLayout>
</layout>
